--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "framer-motion": "^9.0.1",
     "mysql": "^2.18.1",
     "pg": "^8.9.0",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-bootstrap-validation": "^0.1.11",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-icons": "^4.8.0",
     "react-icons-md": "^1.1.0",
     "react-router-dom": "^6.8.0",
@@ -45,5 +45,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.24",
+    "@types/react-dom": "^18.3.7"
   }
 }
