--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ajv": "^8.17.1",
     "axios": "^1.2.6",
     "bcrypt": "^5.1.0",
     "bootstrap": "^5.2.3",
@@ -25,7 +26,7 @@
     "react-icons": "^4.8.0",
     "react-icons-md": "^1.1.0",
     "react-router-dom": "^6.8.0",
-    "react-scripts": "^0.0.0",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
