--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "flixforum",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "18.x",
+    "npm": "10.x"
+  },
   "dependencies": {
     "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.14.0",
