--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "18.x",
+    "node": "22.x",
     "npm": "10.x"
   },
   "dependencies": {
@@ -18,19 +18,20 @@
     "ajv": "^8.17.1",
     "axios": "^1.2.6",
     "bcrypt": "^5.1.0",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^5.3.8",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "framer-motion": "^9.0.1",
     "mysql": "^2.18.1",
     "pg": "^8.9.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.10",
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^18.3.1",
     "react-icons": "^4.8.0",
     "react-icons-md": "^1.1.0",
     "react-router-dom": "^6.8.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^0.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
