--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
     "react-icons-md": "^1.1.0",
     "react-router-dom": "^6.8.0",
     "react-scripts": "^5.0.1",
+    "serve": "^14.2.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
